# Rime_vision

./: .gitignore  LICENSE  README.md
.github/workflows/: build-windows.yml
RimeVision/Sources/RimeVision/: AppState.swift
RimeVision/Sources/RimeVisionApp/: RimeVisionApp.swift
RimeVision/Tests/RimeVisionTestRunner/: AppStateDeployTests.swift  ConfigBackupTests.swift  ConfigFallbackTests.swift  ConfigManagerPersistenceTests.swift  GrammarModelTests.swift  RimePatchTests.swift  ThemeCopyTests.swift  ThemeEditorLayoutTests.swift  main.swift
archive/: README.md
archive/RimeVision/: Package.swift
weasel_vision/: .prettierignore  DESIGN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
weasel_vision/docs/: feature-plan-backup-dict-sync.md
weasel_vision/src/: App.vue  main.ts  utils.ts
weasel_vision/src-tauri/: Cargo.toml  tauri.conf.json
weasel_vision/src-tauri/capabilities/: default.json
weasel_vision/src-tauri/icons/: icon.icns
weasel_vision/src-tauri/src/: lib.rs
weasel_vision/src-tauri/src/commands/: backup.rs  dict.rs  grammar.rs  keybinding.rs  mod.rs  punctuation.rs  schema.rs  settings.rs  style.rs  sync.rs
weasel_vision/src-tauri/src/rime/: backup.rs  color.rs  color_scheme.rs  config.rs  deployer.rs  error.rs  grammar.rs  mod.rs  patch.rs  schema.rs  style.rs  utils.rs
weasel_vision/src/components/: AdvancedSettings.vue  BackupManager.vue  DeployNotice.vue  DictManager.vue  GeneralSettings.vue  GrammarModel.vue  KeybindingEditor.vue  PunctuationSettings.vue  SchemaManager.vue  SyncManager.vue  (+3 more)
(+40 files in other folders)
