[package]
name = "weasel-vision"
version = "0.2.0"
description = "Rime Weasel configuration tool"
authors = ["franvz9"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
chrono = "0.4"
regex = "1"
anyhow = "1"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
open = "5"
thiserror = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
